# xfce4-applet-batt

./: README  configure.ac.in
panel-plugin/: Makefile.am  applet-batt.desktop.in  appletbatt.desktop.in  config_gui.c  config_gui.h  main.c
po/: POTFILES.in
